# dietlog-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
app/: __init__.py  main.py
app/api/: __init__.py  diet.py
app/api/endpoints/: diet.py
app/config/: settings.py
app/exceptions/: __init__.py  image.py
app/integration/: __init__.py  anthropic.py  httpx.py
app/interfaces/: __init__.py  image.py  llm.py
app/prompts/: food_image_description.py  food_nutritional_feedback.py
app/providers/: __init__.py  image.py  llm.py
app/schemas/: diet.py
app/static/: index.html  server.html
app/tests/api/: test_diet.py
