[project]
name = "dietlog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
  "langchain>=0.3.15",
  "langchain-anthropic>=0.3.4",
  "pillow>=11.1.0",
  "pydantic-settings>=2.7.1",
  "pytest>=8.3.4",
  "python-dotenv>=1.0.1",
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "torchvision>=0.20.1",
  "transformers>=4.48.1",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
